# ssmarshal

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzzers/: fuzzer_script_1.rs
src/: lib.rs
ssmarshal_fuzz/: Cargo.toml
ssmarshal_fuzz/in/: test0
ssmarshal_fuzz/src/: main.rs
tests/: roundtrip.rs
