# Copyright (c) 2017 The Robigalia Project Developers
# Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license <LICENSE-MIT
# or http://opensource.org/licenses/MIT>, at your option. All files in the
# project carrying such notice may not be copied, modified, or distributed
# except according to those terms.
[package]
name = "ssmarshal_fuzz"
version = "0.0.1"
authors = ["Corey Richardson <corey@octayn.net>"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = "*"
serde_derive = "*"
ssmarshal =  { path = ".." }
afl = "*"
afl-plugin = "*"

[profile.release]
debug = true
